See changelog v3.9.2, SearchPanel and FilterPanel fixes still to do

--- a/ToDo.txt
+++ b/ToDo.txt
@@ -1,15 +1,15 @@
 Good
 - Main
-- Progress
 
 Okay
 - Group
 - Raid sheet
+- Gearing // enable&disable columns
 
 WIP
-- Gearing
 
 Needs overhaul
+- Progress // submenus only
 - Drops
 - Ports
 
