Drops/Loot rewrite, almost finished, performance optimizations next

--- a/ToDo.txt
+++ b/ToDo.txt
@@ -16,3 +16,14 @@ Needs overhaul
 No idea
 - Upgrades
 - FilterManager
+
+
+
+
+
+--- Journal DB / Map
+info mismatch ??!
+
+2 paths ->
+        activityInfo -> mapID -> journalInstanceID
+        journalIndex -> mapID
